@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/virtual/blas/ChangeLog,v 1.3 2010/01/11 10:55:38 ulm Exp $
 
+*blas-2.1-r2 (26 Apr 2014)
+
+  26 Apr 2014; Mark Wright <gienah@gentoo.org> +blas-2.1-r2.ebuild,
+  metadata.xml:
+  Add int64 use flag for separate eselect modules for int64 providers
+
   19 Jan 2014; Justin Lecher <jlec@gentoo.org> -blas-2.1.ebuild,
   +blas-2.1-r1.ebuild:
   Warn if old ${EPREFIX}/usr/$(get_libdir)/lib${PN}.so is present
